--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,94 @@
-.App {
+
+*{
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  max-width: 100%;
+  min-width: 100%;
+  display: block;
+  border-radius: 5px;
+}   
+.shop-links {
   text-align: center;
+  float: right;
+  margin: 20px;
+  width: 100%;
+  min-width: 100%;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.product{
+  margin: 10px;
+  background-color: #F5F5DC;
+  border-top: 1px solid #CCCCCC;
+  border-right: 1px solid #b3b39f;
+  border-bottom: 1px solid #b3b39f;
+  border-left: 1px solid #CCCCCC;
+  border-radius: 5px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.product h3 {
+  font-size: 1.7em;
+  padding: 3px 0 3px 1px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.star-icon {
+  min-width: auto;
+  width: 20px;
+  height: 20px;
+}
+.icons {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.price {
+  float: right;
+  padding: 10px 10px 10px 1px;
+  font-size: 20px;
+  font-family: Libre Bodoni; 
+  font-weight: bold;
+}
+.rating {
+  font-size: 15px;
+}
+.button {
+  font: bold 14px Arial;
+  background-color: #F5F5DC; 
+  color: green;
+  padding: 8px 16px 8px 16px;
+  margin: 10px;
+  border-top: 1px solid #CCCCCC;
+  border-right: 1px solid #333333;
+  border-bottom: 1px solid #333333;
+  border-left: 1px solid #CCCCCC;
+  border-radius: 5px;
+}
+hr {
+  border-width: 2px;
+}
+a {
+  text-decoration: none;
 }
 
-.App-link {
-  color: #61dafb;
+figure {
+  padding: 5px 5px 0 5px;
+  display: grid;
+  grid-template-rows: 1fr auto;
+  margin-bottom: 10px;
+  break-inside: avoid;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+figure > img {
+  grid-row: 1 / -1;
+  grid-column: 1;
+}
+  
+figcaption {
+  text-align: left;
+  padding: 5px 0 5px 20px;
+}
+
+.masonry {
+  width: 85%;
+  margin: 20px 0 0 0;
+  margin-right: auto;
+  margin-left: auto;
+  column-count: 4;
 }
